# ZipForge

./: .CMakeLists.txt.un~  .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: compressor.cpp.41641CCEE35373E8.idx  core-algorithms.hpp.AEE7DDC7057C1F00.idx  decompressor.cpp.9DA31CE2E309A309.idx  main.cpp.47156B190FB7F4F2.idx
include/: .core-algorithms.hpp.un~  core-algorithms.hpp
src/: .main.cpp.un~  main.cpp
src/algorithms/huffman/: .compressor.cpp.swp  .compressor.cpp.un~  .decompressor.cpp.un~  compressor.cpp  decompressor.cpp
tests/test1/: .decoded.txt.un~  .input.txt.un~  .output.txt.un~  decoded.txt  output.txt
tests/test2/: .input.txt.un~  output.txt
